RESOLVED FIXED107580
IndexedDB: Don't assert when deprecated setCallbacks is called
https://bugs.webkit.org/show_bug.cgi?id=107580
Summary IndexedDB: Don't assert when deprecated setCallbacks is called
Alec Flett
Reported 2013-01-22 13:18:48 PST
IndexedDB: Don't assert when deprecated setCallbacks is called
Attachments
Patch (1.60 KB, patch)
2013-01-22 13:22 PST, Alec Flett
no flags
Alec Flett
Comment 1 2013-01-22 13:22:38 PST
Alec Flett
Comment 2 2013-01-22 13:23:46 PST
I had a minor moment of stupidity during my last refactor.. this method is going away, but shouldn't assert (this is preventing the webkit roll in chromium) tony@ - r?
WebKit Review Bot
Comment 3 2013-01-22 14:05:37 PST
Comment on attachment 184039 [details] Patch Clearing flags on attachment: 184039 Committed r140465: <http://trac.webkit.org/changeset/140465>
WebKit Review Bot
Comment 4 2013-01-22 14:05:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.