IndexedDB: Don't assert when deprecated setCallbacks is called https://bugs.webkit.org/show_bug.cgi?id=107580

Reviewed by Tony Chang.

Remove an assert for IDBTransactionBackendImpl that was deprecated
in a previous commit, but is still called by old chromium code.
After the chromium code is removed, this method will be removed
entirely.

* Modules/indexeddb/IDBTransactionBackendImpl.h:
(WebCore::IDBTransactionBackendImpl::setCallbacks):


Canonical link: https://commits.webkit.org/125810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140465 268f45cc-cd09-0410-ab3c-d52691b4dbfc